[Web Payments] Hide the bottom separator when the row is active.

Bug: 723851
Change-Id: I0b69171a0348b04a82823af68fa9548395f5c126
Reviewed-on: https://chromium-review.googlesource.com/508224
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472982}
Former-commit-id: c705be48a99fc38fd0144481ad11ca305ba0005a